[gd_scene load_steps=7 format=3 uid="uid://be4ulftfi71a0"]

[ext_resource type="Script" path="res://Main/DrawingGame/Rating/rating_scene.gd" id="1_34g4c"]
[ext_resource type="Script" path="res://Main/DrawingGame/Rating/stars_container.gd" id="2_4q1jp"]
[ext_resource type="ButtonGroup" uid="uid://kywmmbrreqoi" path="res://Main/DrawingGame/Rating/stars_button_group.tres" id="2_dtgmy"]
[ext_resource type="Texture2D" uid="uid://dy6mq5ugofksx" path="res://Main/Assets/Project Design/Componenets/RatingStarEmpty.png" id="3_pjx6v"]
[ext_resource type="Texture2D" uid="uid://c4cer0nyjywny" path="res://Main/Assets/Project Design/Componenets/RatingStarFull.png" id="4_wje6d"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5e4pp"]
bg_color = Color(0.956863, 0.945098, 0.870588, 1)

[node name="RatingScene" type="Control" node_paths=PackedStringArray("showcase", "curr_drawing", "drawing_display", "stars_container")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_34g4c")
showcase = NodePath("PanelContainer/CenterContainer/EveryDrawingContainer")
curr_drawing = NodePath("PanelContainer/CenterContainer/PlayerDrawingDisplay/PlayerDrawing")
drawing_display = NodePath("PanelContainer/CenterContainer/PlayerDrawingDisplay")
stars_container = NodePath("PanelContainer/CenterContainer/PlayerDrawingDisplay/StarsContainer")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_5e4pp")

[node name="CenterContainer" type="CenterContainer" parent="PanelContainer"]
layout_mode = 2

[node name="PlayerDrawingDisplay" type="VSplitContainer" parent="PanelContainer/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 50
collapsed = true
dragger_visibility = 1

[node name="PlayerDrawing" type="TextureRect" parent="PanelContainer/CenterContainer/PlayerDrawingDisplay"]
layout_mode = 2

[node name="StarsContainer" type="HBoxContainer" parent="PanelContainer/CenterContainer/PlayerDrawingDisplay"]
layout_mode = 2
alignment = 1
script = ExtResource("2_4q1jp")
stars_button_group = ExtResource("2_dtgmy")
full_star_texture = ExtResource("4_wje6d")
empty_star_texture = ExtResource("3_pjx6v")

[node name="Star1" type="TextureButton" parent="PanelContainer/CenterContainer/PlayerDrawingDisplay/StarsContainer"]
layout_mode = 2
toggle_mode = true
button_group = ExtResource("2_dtgmy")
texture_normal = ExtResource("3_pjx6v")
texture_pressed = ExtResource("3_pjx6v")
texture_hover = ExtResource("3_pjx6v")

[node name="Star2" type="TextureButton" parent="PanelContainer/CenterContainer/PlayerDrawingDisplay/StarsContainer"]
layout_mode = 2
toggle_mode = true
button_group = ExtResource("2_dtgmy")
texture_normal = ExtResource("3_pjx6v")
texture_pressed = ExtResource("3_pjx6v")
texture_hover = ExtResource("3_pjx6v")

[node name="Star3" type="TextureButton" parent="PanelContainer/CenterContainer/PlayerDrawingDisplay/StarsContainer"]
layout_mode = 2
toggle_mode = true
button_group = ExtResource("2_dtgmy")
texture_normal = ExtResource("3_pjx6v")
texture_pressed = ExtResource("3_pjx6v")
texture_hover = ExtResource("3_pjx6v")

[node name="Star4" type="TextureButton" parent="PanelContainer/CenterContainer/PlayerDrawingDisplay/StarsContainer"]
layout_mode = 2
toggle_mode = true
button_group = ExtResource("2_dtgmy")
texture_normal = ExtResource("3_pjx6v")
texture_pressed = ExtResource("3_pjx6v")
texture_hover = ExtResource("3_pjx6v")

[node name="Star5" type="TextureButton" parent="PanelContainer/CenterContainer/PlayerDrawingDisplay/StarsContainer"]
layout_mode = 2
toggle_mode = true
button_group = ExtResource("2_dtgmy")
texture_normal = ExtResource("3_pjx6v")
texture_pressed = ExtResource("3_pjx6v")
texture_hover = ExtResource("3_pjx6v")

[node name="EveryDrawingContainer" type="GridContainer" parent="PanelContainer/CenterContainer"]
visible = false
layout_mode = 2
